Fix body overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,6 @@ body {
   margin: 0;
   color: #4c4c4c;
   transition: 0.5s;
-  overflow: hidden;
 }
 
 img {
