--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -6,7 +6,6 @@ body {
   margin: 0;
   color: $dark-2;
   transition: 0.5s;
-  overflow: hidden;
 }
 
 img {
